@@ -6,14 +6,16 @@
 #include <QTcpSocket>
 #include <QTimer>
 #include <encloud/Auth>
-#include <common/vpn/vpnconfig.h>
-#include <common/vpn/vpnclient.h>
+#include <encloud/Vpn/VpnClient>
+#include <encloud/Vpn/VpnManager>
 
 #define LIBENCLOUD_VPNMANAGER_ATTACH_RETRIES  5
 
 namespace libencloud {
 
-class VpnManager : public QObject
+class Config;
+
+class LIBENCLOUD_DLLSPEC VpnManager : public QObject
 {
     Q_OBJECT
 
